# q-framework

./: a.py  ctmc.py  data_loader.py  draw.py  heter_simulate.py  main.py  pyproject.toml  q_model.py  simulate.py  test.py  utils.py  visualization.py
data/: population_profiles.json
